--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
     <body>
-        <header> hi</header>
+        <header> fortnite battlepass </header>
     </body>
 </html>
