--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-        <header> fortnite battlepass </header>
+        <header class="fortnite"> fortnite battlepass </header>
     </body>
 </html>
